Fix alignment of the navbar left and right elements with the dashboard left and right borders.

--- a/scss/partials/_bw_topics_list.scss
+++ b/scss/partials/_bw_topics_list.scss
@@ -7,7 +7,7 @@ body.fixed-navbar {
 
 div.left-topics-list {
   float: left;
-  padding-left: 10px;
+  padding-left: 5px;
   position: initial;
 
   div.left-topics-list-top{
