--- a/scss/partials/_company_avatar.scss
+++ b/scss/partials/_company_avatar.scss
@@ -52,7 +52,7 @@ div.company-avatar {
 
         @include big_web(){
           margin-top: 15px;
-          margin-left: 0px;
+          margin-left: 1px;
         }
 
       }
