--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -93,7 +93,7 @@ nav.oc-navbar {
   div.oc-navbar-header {
     position: relative;
     margin: 0 auto;
-    padding: 0 34px;
+    padding: 0 28px;
     margin-top: 10px;
 
     div.oc-navbar-header-container{
@@ -146,7 +146,7 @@ nav.oc-navbar {
   div.oc-navbar-bottom {
     position: relative;
     margin: 10px auto;
-    padding: 0 34px;
+    padding: 0 28px;
 
     a.sharing-button {
       color: $oc_blue_dark;
